# hex

./: Cargo.toml  LICENSE  README.md
config/: tasks.sample.toml  tasks.toml
crosscompiler/: Dockerfile
src/: executable_command.rs  lib.rs  main.rs  runner.rs  tasks.rs
src/hexterm/: formatting.rs  hexterm.rs  mod.rs
src/terminal/: crossterm.rs  input.rs  mod.rs
src/views/: input_processor.rs  interactive_widget.rs  linear_layout.rs  mod.rs  text_view.rs  widget.rs  window.rs
src/widgets/: linear_layout.rs  mod.rs  text_view.rs
