[package]
name = "hex"
version = "0.1.0"
authors = ["Lucas Taylor <lucas@perfectlunacy.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.36" # Simplify/Clarify error-handling
portable-pty = "0.4.0" # PTY Pseudo-Terminal support
# Regex for parsing terminal output
regex = "1"
# Logging
log = "0.4"
simplelog = "^0.7.4"
# Toml Parsing
toml = "0.5.6"
# (de)Serialization TODO: Check out https://github.com/not-fl3/nanoserde/ - lighter weight alt.
serde = { version = "1.0", features = ["derive"] }